# sli2dli

./: .gitignore  Cargo.toml  Makefile  README.md
src/: build.rs  lib.rs  main.rs  mod.rs
src/helper/: profile_object.rs
src/logger/: logger.rs  mod.rs
src/manifest/: csv_params.rs  data_set_sli_manifest.rs  manifest.rs  mod.rs  part.rs
src/options/: csv.rs  mod.rs  options.rs
src/processor/: mod.rs  processor.rs
src/profiler/: mod.rs  profile_object.rs
src/types/: formatter.rs  manifest.rs  mod.rs  options.rs  processor.rs
