[package]
name = "sli2dli"
version = "0.1.0"
authors = ["Tomas Korcak <korczis@gmail.com>"]

[dependencies]
clap = ">= 2.18"
csv = "0.15.0"
env_logger = ">= 0.4"
log = ">= 0.3.6"
serde = "1.0.2"
serde_derive = "1.0.2"
serde_json = "1.0.2"
xsv = "0.11.0"

[lib]
name = "sli2dli"
path = "src/lib.rs"

[[bin]]
name = "sli2dli"
doc = false
path = "src/main.rs"
